--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>L-Web</title>
+    <title>{% block title %}{% endblock %}</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        /* 基本样式 */
+        body {
+            background-color: #d5cdcd;
+            color: #fff;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 16px;
+            line-height: 1.5;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* 标题头样式 */
+        #header {
+            background-color: #1c1c1c;
+            color: #fff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+        }
+
+        #header-left {
+            display: flex;
+        }
+
+        #header-left span {
+            cursor: pointer;
+            font-weight: bold;
+            transition: all 0.2s ease-in-out;
+            margin-right: 20px;
+        }
+
+        #header-left span:last-child {
+            margin-right: 0;
+        }
+
+        #header-right {
+            margin-left: auto;
+        }
+
+
+        /* 内容区样式 */
+        #content {
+            margin: 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.5;
+        }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+    </style>
 </head>
 <body>
+<div id="header">
+    <div id="header-left">
+        <span><a href="/index"><span>首页</span></a></span>
+        <span><a href=""><span>博客</span></a></span>
+        <span><a href=""><span>杂记</span></a></span>
+        <span><a href="/chatgpt/show_chatgpt"><span>GPT</span></a></span>
 
+
+    </div>
+    <div id="header-right">
+        <span>用户名: root</span>
+    </div>
+</div>
+<div id="content">
+    {% block content %}{% endblock %}
+</div>
+<script>
+    // 在页面加载完成后，动态获取用户名并显示
+    $(document).ready(function () {
+        $("#username").text("用户名: xxx");
+    });
+</script>
 </body>
 </html>
